Clase 5: Image, OnCchangeText, useState,Button

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 02-ejemploNode/ejemploNode/node_modules/*
 03-clase/components/node_modules/*
 04-clase/components/node_modules/*
+05-clase/components/node_modules/*
 
