--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 03-clase/components/node_modules/*
 04-clase/components/node_modules/*
 05-clase/components/node_modules/*
+06-clase-examen/components/node_modules/*
 
